--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             }
         }
     </style>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Aug 31st for Miku ヾ(*´▽‘*)</title>
 </head>
 
