--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <style>
         #main {
             overflow: hidden;
@@ -11,6 +11,8 @@
             justify-content: center;
             background-size: cover;
             background-position: center;
+            width: 100vw;
+            height: 100vh;
             min-height: 100vh;
             background-repeat: no-repeat;
             position: fixed;
@@ -22,6 +24,15 @@
             background-color: white;
             padding: 16px;
             box-sizing: border-box;
+        }
+
+        /* iOS Safari viewport fix */
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
         }
 
         b {
@@ -135,6 +146,22 @@
             }
         }
 
+        /* Mobile specific adjustments */
+        @media (max-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
+            #main {
+                /* Use absolute positioning instead of fixed for iOS Safari */
+                width: 100%;
+                height: 100%;
+                min-height: 100%;
+            }
+            
+            html, body {
+                height: 100%;
+                min-height: 100%;
+                position: relative;
+            }
+        }
+
         @media (max-width: 480px) {
             .container {
                 padding: 16px;
@@ -187,7 +214,7 @@
                     visible();
                 };
             </script>
-            <div style="position: fixed; bottom: 12px"><a href="https://www.bilibili.com/video/BV1nx411K7Gu/" target="_blank">Video Source</a>. Site by <a href="https://www.bilibiili.com/" target="_blank">cgluWxh</a>.</div>
+            <div style="position: fixed; bottom: 12px"><a href="https://www.bilibili.com/video/BV1nx411K7Gu/" target="_blank">Video Source</a>. Site by <a href="https://www.bilibiili.com/" target="_blank">cgluWxh</a>. <a href="https://icp.gov.moe/?keyword=20253039" target="_blank">萌ICP备20253039号</a></div>
         </footer>
     </div>
 </body>
