--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="container">
             <div id="greeting">Aug 31st for Miku ヾ(*´▽‘*)</div>
             <br />
-            <video autoplay controls src="/831.mp4">
+            <video autoplay controls muted playsinline src="/831.mp4">
                 Your browser does not support the video tag.
             </video>
             <!-- <div class="button-container">
@@ -192,14 +192,6 @@
         </div>
         <footer id="footer">
             <script>
-                // play when interaction
-                document.body.addEventListener("click", () => {
-                    const video = document.querySelector("video");
-                    if (video.paused || video.muted) {
-                        video.muted = false;
-                        video.play();
-                    }
-                }, { once: true });
                 const main = document.getElementById("main");
                 const img = new Image();
                 img.src = "/miku.webp";
